Add port list direct metadata patch
